# meowdzbot

./: .gitignore  Cargo.toml  build.rs  flake.nix  rust-toolchain.toml  shell.nix  style.scss
.github/workflows/: update-nixdots.yaml
csgo_server/: Cargo.toml
csgo_server/src/: info.rs  lib.rs  players.rs  request.rs
migrations/: 20250205214324_server_address.sql  20250206095623_settings.sql  20250206204830_gamestate_integration.sql  20250209184307_status_messages.sql  20250209205538_status_messages_server_column.sql  20250215154143_activity_settings.sql  20250219165745_server_settings.sql  20250219212849_delete_server_address.sql
src/: db.rs  down_detector.rs  main.rs  server_info.rs  servers.rs  settings.rs  socket.rs  steam_redirect.rs  webserver.rs
src/status/: activity.rs  mod.rs  slurs.rs  updating.rs
src/webserver/: main.js  mod.rs  style.rs
