[package]
name = "meowdz-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
csgo_server = { path = "csgo_server" }
poise = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
