[package]
name = "meowdz-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
csgo_server = { path = "csgo_server" }
maud = "0.27.0"
once_cell = "1.20.3"
poise = "0.6.1"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
turf = "0.9.5"
urlencoding = "2.1.3"

[build-dependencies]
copy_dir = "0.1.3"

[workspace]
members = ["csgo_server"]
